cmake_minimum_required(VERSION 3.29)
project(Asilbek_Cyberboy)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Asilbek_Cyberboy superproblem1.cpp)
add_executable(example example.cpp)
add_executable(problem5 problem5.cpp)
add_executable(problem6 problem6.cpp)
add_executable(problem7 problem7.cpp)
add_executable(problem8 problem8.cpp)
add_executable(problem9 problem9.cpp)
