cmake_minimum_required(VERSION 3.29)
project(Asilbek_Cyberboy)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Asilbek_Cyberboy superproblem1.cpp)
add_executable(example example.cpp)
add_executable(problem5 problem5.cpp)
add_executable(problem6 problem6.cpp)
add_executable(problem7 problem7.cpp)
add_executable(problem8 problem8.cpp)
add_executable(problem9 problem9.cpp)
add_executable(loop1 loop1.cpp)
add_executable(loop3 loop3.cpp)
add_executable(loop4 loop4.cpp)
add_executable(loop5 cmake-build-debug/loop5.cpp)
add_executable(loop6 loop6.cpp)
add_executable(loop7 loop7.cpp)
add_executable(loop8 loop8.cpp)
